istio-serviceMesh-security/mtls-auth-policy.yaml
# Description : communication mtls entre les services des differents pods deployes
# mtls-auth-policy.yaml
# ---
apiVersion: "authentification.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: "enable-mtls"
  namespace: "default"
spec:
  peers:
  - mtls:
# ---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
 name: "enable-mtls"
 namespace: "default"
spec:
 host: "*.default.svc.cluster.local"
 trafficPolicy:
  tls:
    mode: ISTIO_MUTUAL
